# xclock

./: CLAUDE.md  Cargo.toml  README.md
xclock/: Cargo.toml
xclock-cli/: Cargo.toml
xclock-cli/src/: main.rs
xclock-hook/: Cargo.toml
xclock-hook/src/: lib.rs
xclock/src/: lib.rs  lib_new.rs
